// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getRoutes > createApplication > express Routes 1`] = `
[
  {
    "file": "unknown",
    "method": "GET",
    "path": "/",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "PUT",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/following",
    "tags": [],
  },
]
`;

exports[`getRoutes > fastify > fastify Routes 1`] = `
[
  {
    "file": "unknown",
    "method": "GET",
    "path": "/",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/following",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/:id",
    "tags": [],
  },
]
`;

exports[`getRoutes > hapi > hapi Routes 1`] = `
[
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/following",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "PUT",
    "path": "/users/:id",
    "tags": [],
  },
]
`;

exports[`getRoutes > koa > koa Routes 1`] = `
[
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/activity",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/activity/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/users",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "PUT",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/users/following",
    "tags": [],
  },
]
`;
